--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 /NFe.Components/obj/Debug
 /NFe.Components.Info/obj/Debug
 /NFe.Service/obj/Debug
+/NFe.ConvertCFe/bin/Debug
+/MetroFramework/MetroFramework.Design/bin/Release
+/MetroFramework/MetroFramework.Fonts/bin/Release
